--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Deploy React to GitHub Pages
         uses: bitovi/github-actions-react-to-ghp@v1.2.0
         with:
-          path: 'front/public'
+          path: 'public'
 
