--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "clinic",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://ligia.belvs.dev/",
+  "homepage": "https://ligia.belvs.dev/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
